tdf#146286 Crash/hang calling context menu

regression from
    commit b37f9fbf05e16eb58eae40c6d900a4b9da2972db
    osl::Mutex->std::mutex in VCLXMenu

Change-Id: I60caa02f9d8bb40b7fcf8a1009aeeac6ff3a094c